--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 #      Main Configs       #
 # ----------------------- #
 
-url: http://young40.github.com
+url: http://young40.github.io
 title: 喜气羊羊 
 subtitle: 代码是一种人生态度
 author: Young40
