--- a/_config.yml
+++ b/_config.yml
@@ -27,6 +27,7 @@ public_dir: public
 
 # Writing
 new_post_name: :title.md # File name of new posts
+new_post_name: :year-:month-:day-:title.md
 default_layout: post
 titlecase: false # Transform title into titlecase
 external_link: true # Open external links in new tab
