--- a/_config.yml
+++ b/_config.yml
@@ -3,10 +3,10 @@
 ## Source: https://github.com/hexojs/hexo/
 
 # Site
-title: Hexo
-subtitle:
+title: 喜气羊羊
+subtitle: 游来游去
 description:
-author: John Doe
+author: Young40
 email:
 language:
 
