--- a/_config.yml
+++ b/_config.yml
@@ -68,7 +68,8 @@ theme: next
 # Deployment
 ## Docs: http://hexo.io/docs/deployment.html
 deploy:
-  type:
+  type: git
+  repo: git@github.com:young40/young40.github.com.git
 
 # Theme config
 duoshuo_shortname: young40
