--- a/package.json
+++ b/package.json
@@ -3,10 +3,10 @@
   "version": "0.0.0",
   "private": true,
   "hexo": {
-    "version": "3.1.1"
+    "version": "3.2.2"
   },
   "dependencies": {
-    "hexo": "^3.1.0",
+    "hexo": "^3.2.2",
     "hexo-deployer-git": "0.0.4",
     "hexo-generator-archive": "^0.1.2",
     "hexo-generator-category": "^0.1.2",
@@ -15,6 +15,7 @@
     "hexo-generator-tag": "^0.1.1",
     "hexo-renderer-ejs": "^0.1.0",
     "hexo-renderer-marked": "^0.2.4",
+    "hexo-renderer-org": "^0.2.6",
     "hexo-renderer-stylus": "^0.2.0",
     "hexo-server": "^0.1.2"
   }
