--- a/_config.yml
+++ b/_config.yml
@@ -43,6 +43,9 @@ highlight:
   auto_detect: true
   tab_replace:
 
+org:
+  emacs: '/Applications/Emacs.app/Contents/MacOS/Emacs'
+
 # Category & Tag
 default_category: uncategorized
 category_map:
