--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ timezone:
 
 # URL
 ## If your site is put in a subdirectory, set url as 'http://yoursite.com/child' and root as '/child/'
-url: http://www.young40.com
+url: http://www.young40.com/hexoblog
 root: /hexoblog/
 permalink: :year/:month/:day/:title/
 permalink_defaults:
