--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseurl = "http://www.young40.com/"
+baseurl = "https://www.young40.com/"
 languageCode = "en-us"
 Title = "杨世玲的博客"
 # Copyright notice. This is displayer in the footer.
