--- a/config.toml
+++ b/config.toml
@@ -27,7 +27,7 @@ theme = "hugo_theme_pickles"
   # youtube = "Your YouTube username"
   # linkedin = "Your LinkedIn username"
   # Disqus shortname
-  disqus = "young40"
+  disqus = "young40new"
   # Google Analytics API key.
   # ga_api_key = "Your Google Analytics tracking id"
   author = "杨世玲"
