--- a/config.toml
+++ b/config.toml
@@ -39,7 +39,7 @@ theme = "hugo_theme_pickles"
   # subtitle = "Short subtitle"
   # Logo image. This is displayed ogp image.
   # logo = "/path/to/logo"
-  # favicon = "/path/to/favicon"
+  favicon = "/favicon.ico"
 
 [[menu.main]]
     name = "Home"
