--- a/config.toml
+++ b/config.toml
@@ -4,7 +4,7 @@ Title = "杨世玲的博客"
 # Copyright notice. This is displayer in the footer.
 copyright = "&copy; 2018 Copyright 杨世玲"
 
-theme = "hugo_theme_pickles"
+theme = "solar-theme-hugo"
 
 [params]
   paginate = 10
