--- a/config.toml
+++ b/config.toml
@@ -2,7 +2,7 @@ baseurl = "https://www.young40.com/"
 languageCode = "en-us"
 Title = "杨世玲的博客"
 # Copyright notice. This is displayer in the footer.
-copyright = "&copy; 2018 Copyright 杨世玲"
+copyright = "© 2019 Copyright 杨世玲"
 
 theme = "solar-theme-hugo"
 
