--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "themes/hugo_theme_pickles"]
 	path = themes/hugo_theme_pickles
 	url = git@github.com:mismith0227/hugo_theme_pickles.git
+[submodule "themes/solar-theme-hugo"]
+	path = themes/solar-theme-hugo
+	url = git@github.com:young40/solar-theme-hugo.git
