--- a/config.toml
+++ b/config.toml
@@ -188,8 +188,8 @@ copyright = "杨世玲"            # default: author.name ↓        # 默认为
     # d-facebook = "http://localhost:1313"
     # e-linkedin = "http://localhost:1313"
     # f-google = "http://localhost:1313"
-    g-github = "http://localhost:1313"
-    h-weibo = "http://localhost:1313"
+    g-github = "https://github.com/young40"
+    h-weibo = "https://weibo.com/n/杨世玲"
     i-zhihu = "https://www.zhihu.com/people/young40"
     # j-douban = "http://localhost:1313"
     # k-pocket = "http://localhost:1313"
