--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "themes/solar-theme-hugo"]
 	path = themes/solar-theme-hugo
 	url = git@github.com:young40/solar-theme-hugo.git
+[submodule "themes/even"]
+	path = themes/even
+	url = git@github.com:olOwOlo/hugo-theme-even.git
